tests/ui/lint/snapshots/bad_bit_mask_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Incompatible bit mask
   ╭─[test.lis:6:11]
 5 │   let a: Flags = 5
 6 │   let _ = a & 1 == 2
   ·           ─────┬────
   ·                ╰── always `false`
 7 │ }
   ╰────
  help: The mask makes this value unable to satisfy the comparison, so it is always `false`. Check the mask or the constant · code: [lint.bad_bit_mask]
