tests/ui/lint/snapshots/bad_bit_mask_negative_mask.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Incompatible bit mask
   ╭─[test.lis:4:11]
 3 │   let x = 5
 4 │   let _ = x & -2 == 1
   ·           ─────┬─────
   ·                ╰── always `false`
 5 │ }
   ╰────
  help: The mask makes this value unable to satisfy the comparison, so it is always `false`. Check the mask or the constant · code: [lint.bad_bit_mask]
