tests/ui/lint/snapshots/bind_instead_of_map_option.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `map`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = o.and_then(|x| Some(x + 1))
   ·           ─────────────┬─────────────
   ·                        ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.and_then(|x| Some(y))` with `.map(|x| y)` · code: [lint.bind_instead_of_map]
