tests/ui/lint/snapshots/bind_instead_of_map_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `map`
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = r.and_then(|x| Ok(x + 1))
   ·           ────────────┬────────────
   ·                       ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.and_then(|x| Ok(y))` with `.map(|x| y)` · code: [lint.bind_instead_of_map]
